chore: made next function async to avoid error in SplitText, deleted comments, deleted animations for buttons on smaller screens

--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -26,11 +26,10 @@
 
 .submit-btn {
   pointer-events: auto;
-  transition: transform 0.3s ease-in-out !important; /* Smooth transition */
+  transition: transform 0.3s ease-in-out !important;
 }
 .submit-btn:hover {
   background: transparent !important;
-  transform: translateY(-5px); /* Move the button up */
 }
 
 .submit-text {
